Added validation to EventManagment proj, refactoring UserAPI with a lot errors
