# src/TicketManagement.EventManagementAPI/Controllers/EventManagementController.cs
@@ -4,6 +4,7 @@ using Microsoft.AspNetCore.Mvc;
 using Microsoft.Extensions.Logging;
 using TicketManagement.Common.DI;
 using TicketManagement.Common.Entities;
+using TicketManagement.Common.Validation;
 
 namespace TicketManagement.EventManagementAPI.Controllers
 {
@@ -45,25 +46,11 @@ namespace TicketManagement.EventManagementAPI.Controllers
         [HttpPost]
         [ProducesResponseType(StatusCodes.Status201Created)]
         [ProducesResponseType(StatusCodes.Status400BadRequest)]
-        public async Task<IActionResult> InsertEventAsync(Event @event, decimal price)
+        public async Task<IActionResult> InsertEventAsync(Event @event, [Optional] decimal price)
         {
+            await ValidateAsync(@event);
             await _eventRepository.InsertAsync(@event, price);
             return Ok();
-        }
-
-        /// <summary>
-        /// Returns selected event.
-        /// </summary>
-        /// <returns>.</returns>
-        [HttpGet("{eventId:int}")]
-        [AllowAnonymous]
-        [ProducesResponseType(typeof(Event), StatusCodes.Status200OK)]
-        [ProducesResponseType(StatusCodes.Status404NotFound)]
-        public async Task<IActionResult> GetByIdEventAsync(int eventId)
-        {
-            var @event = await _eventRepository.GetByIdAsync(eventId);
-            IActionResult result = @event is null ? NotFound() : Ok(@event);
-            return result;
         }
 
         /// <summary>
@@ -73,6 +60,7 @@ namespace TicketManagement.EventManagementAPI.Controllers
         [HttpPut]
         public async Task<IActionResult> UpdateEventAsync(Event @event, [Optional] decimal price)
         {
+            await ValidateAsync(@event);
             await _eventRepository.UpdateAsync(@event, price);
             return Ok();
         }
@@ -88,6 +76,21 @@ namespace TicketManagement.EventManagementAPI.Controllers
         {
             await _eventRepository.DeleteAsync(eventId);
             return NoContent();
+        }
+
+        /// <summary>
+        /// Returns selected event.
+        /// </summary>
+        /// <returns>.</returns>
+        [HttpGet("{eventId:int}")]
+        [AllowAnonymous]
+        [ProducesResponseType(typeof(Event), StatusCodes.Status200OK)]
+        [ProducesResponseType(StatusCodes.Status404NotFound)]
+        public async Task<IActionResult> GetByIdEventAsync(int eventId)
+        {
+            var @event = await _eventRepository.GetByIdAsync(eventId);
+            IActionResult result = @event is null ? NotFound() : Ok(@event);
+            return result;
         }
 
         /// <summary>
@@ -149,6 +152,66 @@ namespace TicketManagement.EventManagementAPI.Controllers
         public async Task<ActionResult<int>> GetSeatsCountAsync(int layoutId)
         {
             return await _eventRepository.GetSeatsCountAsync(layoutId);
+        }
+
+        private async Task EventValidate(Event entity)
+        {
+            if ((entity.EventTime.Ticks - DateTimeOffset.Now.Ticks) < 0)
+            {
+                throw new ValidationException("Event can't be created in the past!");
+            }
+
+            if (entity.EventTime > entity.EventEndTime)
+            {
+                throw new ValidationException("EventEndTime cannot be later than EventTime!");
+            }
+
+            if (entity.Id == default)
+            {
+                var evntArray = await _eventRepository.GetAllByLayoutId(entity.LayoutId).ToListAsyncSafe();
+                foreach (var evnt in evntArray)
+                {
+                    if (entity.LayoutId == evnt.LayoutId && entity.Name == evnt.Name)
+                    {
+                        throw new ValidationException("Layout name should be unique in venue!");
+                    }
+
+                    if (entity.LayoutId == evnt.LayoutId && entity.EventTime == evnt.EventTime)
+                    {
+                        throw new ValidationException("Do not create event for the same layout in the same time!");
+                    }
+                }
+            }
+
+            if (await GetSeatsCountAsync(entity.LayoutId) == default)
+            {
+                throw new ValidationException("Create event is not possible! Haven't seats in Area!");
+            }
+        }
+
+        private async Task ValidateAsync(Event entity)
+        {
+            if (entity.LayoutId == default)
+            {
+                throw new ValidationException("The field 'LayoutId' of Event is not allowed to be null!");
+            }
+
+            if (string.IsNullOrEmpty(entity.Name))
+            {
+                throw new ValidationException("The field 'Name' of Event is not allowed to be empty!");
+            }
+
+            if (string.IsNullOrEmpty(entity.Description))
+            {
+                throw new ValidationException("The field 'Description' of Event is not allowed to be empty!");
+            }
+
+            if (string.IsNullOrEmpty(entity.EventLogoImage))
+            {
+                throw new ValidationException("The field 'EventLogoImage' of Event is not allowed to be empty!");
+            }
+
+            await EventValidate(entity);
         }
     }
 }
